--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.0.0",
     "ts-node": "^10.9.1",
     "zod": "^3.22.4"
