--- a/.env
+++ b/.env
@@ -1,7 +1,22 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# Recommended for most uses
+DATABASE_URL=postgres://neondb_owner:npg_7Sq0vldOfVxt@ep-bitter-fire-a4tt4yk8-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_7Sq0vldOfVxt@ep-bitter-fire-a4tt4yk8.us-east-1.aws.neon.tech/neondb?sslmode=require
 
-DATABASE_URL="file:./dev.db"
+# Parameters for constructing your own connection string
+PGHOST=ep-bitter-fire-a4tt4yk8-pooler.us-east-1.aws.neon.tech
+PGHOST_UNPOOLED=ep-bitter-fire-a4tt4yk8.us-east-1.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_7Sq0vldOfVxt
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgres://neondb_owner:npg_7Sq0vldOfVxt@ep-bitter-fire-a4tt4yk8-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_7Sq0vldOfVxt@ep-bitter-fire-a4tt4yk8.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-bitter-fire-a4tt4yk8-pooler.us-east-1.aws.neon.tech
+POSTGRES_PASSWORD=npg_7Sq0vldOfVxt
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_7Sq0vldOfVxt@ep-bitter-fire-a4tt4yk8-pooler.us-east-1.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_7Sq0vldOfVxt@ep-bitter-fire-a4tt4yk8-pooler.us-east-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=15&sslmode=require
